add handler for omnibook displays. Add omnibook support. don't prepend the acpi/ here as the new omnibook isn't under /proc/acpi.     See http://bugzilla.gnome.org/show_bug.cgi?id=331458 for details.